Fix build failure with "enable_webrtc = false".

BUG=642210
TEST=

Review-Url: https://codereview.chromium.org/2287263003
Cr-Commit-Position: refs/heads/master@{#415846}

Former-commit-id: 46224dddfc39d6ebaa9c3660fdd2808eb3ce861e